alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     -webkit-user-select:none; 
     -moz-user-select:none; 
     -ms-user-select: none;
-    left: 46.5%;
+    margin: 0 auto;
     margin-top: 30px;
 }
 .temp-switch-checkbox {
